--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.1",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.3",
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
     "firebase-tools": "^9.10.0"
   }
 }
